--- a/main.css
+++ b/main.css
@@ -661,6 +661,10 @@ ul.sub-menu {
     background-color: #87c05e;
 }
 
+.progress-bar.bar6 {
+    background-color: #5833FF;
+}
+
 .language-skill {
     margin-top: 50px;
 }
